--- a/src/Components/Admins/EditUser/Edit.css
+++ b/src/Components/Admins/EditUser/Edit.css
@@ -1,16 +1,15 @@
-
-.login-container{
+.admin-edit-container{
     background: rgb(218, 218, 218);
 }
 
-.login-container .header{
+.admin-edit-container .header{
     text-align: center;
     margin-top: 30px;
     font-size: 35px;
     color: rgb(154, 153, 153);
 }
 
-.login-container .form-container{
+.admin-edit-container .form-container{
     width: 40vw;
     height: 60vh;
     position: absolute;
@@ -22,14 +21,14 @@
     border-radius: 12px;
 }
 
-.login-container .form-container .form{
+.admin-edit-container .form-container .form{
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
 }
 
-.login-container .form-container .form input{
+.admin-edit-container .form-container .form input{
     width: 100%;
     height: 35px;
     margin-bottom: 20px;
@@ -40,11 +39,11 @@
     background-color: #c1c1c1;
 }
 
-.login-container .form-container .form input:focus{
+.admin-edit-container .form-container .form input:focus{
     outline: 0;
 }
 
-.login-container .button{
+.admin-edit-container .button{
     width: 40%;
     height: 35px;
     border: none;
@@ -56,16 +55,4 @@
     color: #fff;
     font-weight: bold;
     box-shadow: 2px 2px 2px #777 , -2px -2px 2px #ddd;
-    cursor: pointer;
-}
-
-.login-container .form-container .signup{
-    text-align: center;
-    margin-top: 10px;
-}
-
-.login-container .form-container .signup .text-decoration{
-    text-decoration: none;
-    color: rgb(71, 71, 71);
-    margin-left: 12px;
 }
