--- a/src/Components/Admins/Manage/Manage.css
+++ b/src/Components/Admins/Manage/Manage.css
@@ -21,12 +21,12 @@
     outline: 0;
 }
 
-.table .row{
+.manage-container .table .row{
     width: auto;
     height: auto;
 }
 
-.table .row th , .table .row td{
+.manage-container .table .row th , .manage-container .table .row td{
     color: rgb(70, 70, 70);
     font-weight: bolder;
     text-align: center;
@@ -37,7 +37,8 @@
     border-radius: 10px;
 }
 
-.admin-profile-pic{
+.manage-container .admin-profile-pic{
     width: 50px;
     height: 50px;
+    border-radius: 50%;
 }
