--- a/src/Components/Admins/Manage/Manage.css
+++ b/src/Components/Admins/Manage/Manage.css
@@ -1,12 +1,13 @@
 .manage-container{
-    margin-top: 30px;
+    margin-top: 130px;
+    width: 90%;
+    position: relative;
+    left: 50%;
+    transform: translate(-50%,0%);
 }
 
 .search{
-    position: relative;
-    left: 99.7%;
-    transform: translate(-100%,0);
-    margin-top: 15px;
+    position: absolute;
     height: 30px;
     width: 20%;
     box-shadow: 1px 1px 1px #888 , -1px -1px 1px #fff;
@@ -15,6 +16,25 @@
     border: 0;
     padding: 6px;
     padding-left: 12px;
+    top: 80px;
+    right: 80px;
+}
+
+.add-users{
+    position: absolute;
+    top: 80px;
+    left: 80px;
+    box-shadow: 1px 1px 1px #888 , -1px -1px 1px #fff;
+    background-color: #bdbdbd;
+    border-radius: 10px;
+    border: 0;
+    padding: 12px;
+    cursor: pointer;
+    color: #494949;
+}
+
+.add-users:active{
+    box-shadow: none;
 }
 
 .search:focus{
